[package]
name = "simple_socket"
version = "0.1.0"
authors = ["Lattice0"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["async"]
async = ["futures"]

[dependencies]
futures = { version="0.3.13", default-features = false, features = ["std", "executor"], optional=true }
